--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,9 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Remove test file
+        run: rm -f src/test.ts
+
       - name: Build
         run: npm run build
         env:
