--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,8 +20,16 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Remove test file
-        run: rm -f src/test.ts
+      - name: Create env file
+        run: |
+          echo "VITE_AWS_REGION=ap-northeast-2" >> .env
+          echo "VITE_COGNITO_USER_POOL_ID=${{ secrets.COGNITO_USER_POOL_ID }}" >> .env
+          echo "VITE_COGNITO_APP_CLIENT_ID=${{ secrets.COGNITO_APP_CLIENT_ID }}" >> .env
+          echo "VITE_COGNITO_CLIENT_ID=${{ secrets.COGNITO_CLIENT_ID }}" >> .env
+          echo "VITE_IDENTITY_POOL_ID=${{ secrets.IDENTITY_POOL_ID }}" >> .env
+
+      - name: Build
+        run: npm run build
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
@@ -29,24 +37,6 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: 'ap-northeast-2'
-
-      - name: Build
-        run: npm run build
-        env:
-          VITE_AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          VITE_AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          VITE_AWS_REGION: 'ap-northeast-2'
-          VITE_COGNITO_USER_POOL_ID: ${{ secrets.COGNITO_USER_POOL_ID }}
-          VITE_COGNITO_APP_CLIENT_ID: ${{ secrets.COGNITO_APP_CLIENT_ID }}
-          VITE_COGNITO_CLIENT_ID: ${{ secrets.COGNITO_CLIENT_ID }}
-          VITE_IDENTITY_POOL_ID: ${{ secrets.IDENTITY_POOL_ID }}
-
-      - name: Verify build output
-        run: |
-          echo "=== Checking dist directory ==="
-          ls -la dist/
-          echo "=== Checking for environment variables in built files ==="
-          grep -r "VITE_" dist/ || echo "No environment variables found in build output"
 
       - name: Deploy to S3
         run: aws s3 sync dist s3://nationslab-lms --delete 
