--- a/.gitignore
+++ b/.gitignore
@@ -23,8 +23,8 @@ dist-ssr
 *.sln
 *.sw?
 
-# Environment variables
+# Environment Variables
 .env
 .env.local
-.env.development
-.env.production
+.env.*.local
+!.env.example
