--- a/package.json
+++ b/package.json
@@ -10,33 +10,36 @@
     "test": "ts-node src/test.ts"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.5.2",
     "@aws-amplify/auth": "^6.9.0",
+    "@aws-amplify/storage": "^6.7.5",
     "@aws-sdk/client-cognito-identity": "^3.716.0",
     "@aws-sdk/client-cognito-identity-provider": "^3.716.0",
     "@aws-sdk/client-dynamodb": "^3.716.0",
+    "@aws-sdk/client-s3": "^3.717.0",
     "@aws-sdk/credential-provider-cognito-identity": "^3.716.0",
+    "@aws-sdk/s3-request-presigner": "^3.717.0",
     "@aws-sdk/util-dynamodb": "^3.716.0",
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.15.1",
-    "@mui/material": "^5.15.1",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.2",
-    "@types/styled-components": "^5.1.34",
-    "amazon-cognito-identity-js": "^6.3.7",
+    "@reduxjs/toolkit": "^2.5.0",
+    "antd": "^5.22.7",
     "aws-amplify": "^6.11.0",
+    "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "framer-motion": "^11.15.0",
     "lucide-react": "^0.469.0",
     "react": "^18.2.0",
+    "react-day-picker": "^9.5.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.28.1",
-    "styled-components": "^6.1.13",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7",
-    "ts-node": "^10.9.2"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20.10.5",
