--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@aws-sdk/credential-provider-cognito-identity": "^3.716.0",
     "@aws-sdk/s3-request-presigner": "^3.717.0",
     "@aws-sdk/util-dynamodb": "^3.716.0",
+    "@emotion/styled": "^11.14.0",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.1",
