--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^11.15.0",
     "lucide-react": "^0.469.0",
+    "pg": "^8.13.1",
     "react": "^18.2.0",
     "react-day-picker": "^9.5.0",
     "react-dom": "^18.2.0",
@@ -57,5 +58,10 @@
     "tailwindcss": "^3.4.17",
     "typescript": "^5.2.2",
     "vite": "^5.0.8"
-  }
+  },
+  "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
+  "main": "eslint.config.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
