--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "test": "ts-node src/test.ts"
   },
   "dependencies": {
+    "@ant-design/charts": "^2.2.6",
     "@ant-design/icons": "^5.5.2",
+    "@ant-design/plots": "^2.3.3",
     "@aws-amplify/auth": "^6.9.0",
     "@aws-amplify/storage": "^6.7.5",
     "@aws-sdk/client-cognito-identity": "^3.716.0",
@@ -24,6 +26,7 @@
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-switch": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-toggle": "^1.1.1",
     "@reduxjs/toolkit": "^2.5.0",
@@ -50,6 +53,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.28.1",
+    "recharts": "^2.15.0",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
