--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@aws-sdk/s3-request-presigner": "^3.717.0",
     "@aws-sdk/util-dynamodb": "^3.716.0",
     "@emotion/styled": "^11.14.0",
+    "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.1",
