--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.15.0",
+    "keen-slider": "^6.8.6",
     "lucide-react": "^0.469.0",
     "pg": "^8.13.1",
     "react": "^18.2.0",
