--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,6 +3,7 @@ name: Deploy to S3
 on:
   push:
     branches:
+      - staging
       - main
 
 jobs:
@@ -20,8 +21,13 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Build
-        run: npm run build
+      - name: Build for staging
+        if: github.ref == 'refs/heads/staging'
+        run: npm run build:staging
+
+      - name: Build for production
+        if: github.ref == 'refs/heads/main'
+        run: npm run build:production
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
@@ -30,5 +36,10 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: 'ap-northeast-2'
 
-      - name: Deploy to S3
+      - name: Deploy to staging S3
+        if: github.ref == 'refs/heads/staging'
+        run: aws s3 sync dist s3://staging-nationslab-lms --delete
+
+      - name: Deploy to production S3
+        if: github.ref == 'refs/heads/main'
         run: aws s3 sync dist s3://nationslab-lms --delete 
