--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "@aws-sdk/s3-request-presigner": "^3.717.0",
     "@aws-sdk/util-dynamodb": "^3.716.0",
     "@emotion/styled": "^11.14.0",
+    "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-switch": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.2",
+    "@radix-ui/react-toast": "^1.2.4",
     "@radix-ui/react-toggle": "^1.1.1",
     "@reduxjs/toolkit": "^2.5.0",
     "@tiptap/extension-color": "^2.11.0",
