--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@aws-sdk/credential-provider-cognito-identity": "^3.716.0",
     "@aws-sdk/s3-request-presigner": "^3.717.0",
     "@aws-sdk/util-dynamodb": "^3.716.0",
+    "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
@@ -50,7 +51,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
-    "framer-motion": "^11.15.0",
+    "framer-motion": "^11.18.1",
     "keen-slider": "^6.8.6",
     "lucide-react": "^0.469.0",
     "pg": "^8.13.1",
