--- a/package.json
+++ b/package.json
@@ -2,85 +2,91 @@
   "name": "lms-nationslab",
   "private": true,
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "build:staging": "tsc && vite build --mode staging",
-    "build:production": "tsc && vite build --mode production",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "test": "ts-node src/test.ts"
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@ant-design/charts": "^2.2.6",
-    "@ant-design/icons": "^5.5.2",
-    "@ant-design/plots": "^2.3.3",
-    "@aws-amplify/auth": "^6.9.0",
-    "@aws-amplify/storage": "^6.7.5",
-    "@aws-sdk/client-cognito-identity": "^3.716.0",
-    "@aws-sdk/client-cognito-identity-provider": "^3.716.0",
-    "@aws-sdk/client-dynamodb": "^3.716.0",
-    "@aws-sdk/client-s3": "^3.717.0",
-    "@aws-sdk/credential-provider-cognito-identity": "^3.716.0",
-    "@aws-sdk/s3-request-presigner": "^3.717.0",
-    "@aws-sdk/util-dynamodb": "^3.716.0",
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
-    "@radix-ui/react-alert-dialog": "^1.1.4",
-    "@radix-ui/react-dropdown-menu": "^2.1.4",
-    "@radix-ui/react-label": "^2.1.1",
-    "@radix-ui/react-select": "^2.1.4",
-    "@radix-ui/react-slot": "^1.1.1",
+    "@ant-design/icons": "^5.6.0",
+    "@aws-amplify/auth": "^6.0.17",
+    "@aws-amplify/core": "^6.0.17",
+    "@aws-amplify/ui-react": "^6.1.5",
+    "@aws-sdk/client-cognito-identity-provider": "^3.738.0",
+    "@aws-sdk/client-s3": "^3.716.0",
+    "@aws-sdk/s3-request-presigner": "^3.716.0",
+    "@hookform/resolvers": "^3.3.4",
+    "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-navigation-menu": "^1.1.4",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-progress": "^1.0.3",
+    "@radix-ui/react-scroll-area": "^1.0.5",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.1.2",
-    "@radix-ui/react-tabs": "^1.1.2",
-    "@radix-ui/react-toast": "^1.2.4",
+    "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-toggle": "^1.1.1",
-    "@reduxjs/toolkit": "^2.5.0",
-    "@tiptap/extension-color": "^2.11.0",
-    "@tiptap/extension-font-family": "^2.11.0",
-    "@tiptap/extension-link": "^2.11.0",
-    "@tiptap/extension-text-align": "^2.11.0",
-    "@tiptap/extension-text-style": "^2.11.0",
-    "@tiptap/extension-underline": "^2.11.0",
-    "@tiptap/pm": "^2.11.0",
-    "@tiptap/react": "^2.11.0",
-    "@tiptap/starter-kit": "^2.11.0",
-    "antd": "^5.22.7",
-    "aws-amplify": "^6.11.0",
-    "axios": "^1.7.9",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "date-fns": "^4.1.0",
-    "framer-motion": "^11.18.1",
+    "@radix-ui/react-tooltip": "^1.0.7",
+    "@reduxjs/toolkit": "^2.2.1",
+    "@tanstack/react-table": "^8.13.2",
+    "@tiptap/extension-color": "^2.11.5",
+    "@tiptap/extension-font-family": "^2.11.5",
+    "@tiptap/extension-link": "^2.11.5",
+    "@tiptap/extension-text-align": "^2.11.5",
+    "@tiptap/extension-text-style": "^2.11.5",
+    "@tiptap/extension-underline": "^2.11.5",
+    "@tiptap/react": "^2.11.5",
+    "@tiptap/starter-kit": "^2.11.5",
+    "antd": "^5.23.3",
+    "aws-amplify": "^6.0.17",
+    "axios": "^1.6.7",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "cmdk": "^1.0.0",
+    "date-fns": "^3.3.1",
+    "framer-motion": "^11.0.8",
     "keen-slider": "^6.8.6",
-    "lucide-react": "^0.469.0",
-    "pg": "^8.13.1",
+    "lucide-react": "^0.344.0",
+    "next-themes": "^0.2.1",
     "react": "^18.2.0",
-    "react-day-picker": "^9.5.0",
+    "react-day-picker": "^8.10.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^9.2.0",
-    "react-router-dom": "^6.28.1",
-    "recharts": "^2.15.0",
-    "sonner": "^1.7.1",
-    "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7"
+    "react-hook-form": "^7.51.0",
+    "react-redux": "^9.1.0",
+    "react-router-dom": "^6.22.2",
+    "recharts": "^2.12.2",
+    "sonner": "^1.4.3",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.15",
-    "@types/node": "^20.10.5",
-    "@types/react": "^18.2.43",
-    "@types/react-dom": "^18.2.17",
-    "@typescript-eslint/eslint-plugin": "^6.14.0",
-    "@typescript-eslint/parser": "^6.14.0",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.16",
+    "@types/node": "^20.11.24",
+    "@types/react": "^18.2.56",
+    "@types/react-dom": "^18.2.19",
+    "@typescript-eslint/eslint-plugin": "^7.0.2",
+    "@typescript-eslint/parser": "^7.0.2",
     "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^8.55.0",
+    "autoprefixer": "^10.4.18",
+    "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.17",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.2.2",
-    "vite": "^5.0.8"
+    "vite": "^5.1.4"
   },
   "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
   "main": "eslint.config.js",
