--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "antd": "^5.23.3",
     "aws-amplify": "^6.0.17",
     "axios": "^1.6.7",
+    "chart.js": "^4.4.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
@@ -62,6 +63,7 @@
     "lucide-react": "^0.344.0",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.5",
