--- a/package.json
+++ b/package.json
@@ -16,23 +16,27 @@
     "@aws-amplify/core": "^6.0.17",
     "@aws-amplify/ui-react": "^6.1.5",
     "@aws-sdk/client-cognito-identity-provider": "^3.738.0",
+    "@aws-sdk/client-dynamodb": "^3.777.0",
     "@aws-sdk/client-s3": "^3.716.0",
+    "@aws-sdk/lib-dynamodb": "^3.778.0",
     "@aws-sdk/s3-request-presigner": "^3.716.0",
     "@emotion/styled": "^11.14.0",
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
-    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-navigation-menu": "^1.1.4",
-    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-progress": "^1.1.1",
+    "@radix-ui/react-radio-group": "^1.2.3",
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.1.2",
-    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-switch": "^1.1.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
@@ -53,10 +57,10 @@
     "aws-amplify": "^6.0.17",
     "axios": "^1.6.7",
     "chart.js": "^4.4.7",
-    "class-variance-authority": "^0.7.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
-    "date-fns": "^3.3.1",
+    "date-fns": "^3.6.0",
     "framer-motion": "^11.0.8",
     "hls.js": "^1.5.20",
     "keen-slider": "^6.8.6",
@@ -64,12 +68,13 @@
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.0",
-    "react-day-picker": "^8.10.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.51.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.2",
+    "react-toastify": "^11.0.5",
     "recharts": "^2.12.2",
     "sonner": "^1.4.3",
     "tailwind-merge": "^2.2.1",
