--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@tiptap/extension-underline": "^2.11.5",
     "@tiptap/react": "^2.11.5",
     "@tiptap/starter-kit": "^2.11.5",
+    "@types/xlsx": "^0.0.35",
     "@videojs/http-streaming": "^3.17.0",
     "antd": "^5.23.3",
     "aws-amplify": "^6.0.17",
@@ -67,6 +68,7 @@
     "lucide-react": "^0.344.0",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-chartjs-2": "^5.3.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
@@ -82,6 +84,7 @@
     "video.js": "^8.21.0",
     "videojs-contrib-quality-levels": "^4.1.0",
     "videojs-http-source-selector": "^1.1.6",
+    "xlsx": "^0.18.5",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -90,6 +93,7 @@
     "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^20.11.24",
     "@types/react": "^18.2.56",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18.2.19",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.0.2",
